main html first page
the first page had been finished,but some of the control still need to
improve.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,90 @@
     <title>China-Traveling</title>
 </head>
 <body>
+<div class="wallpaper">
+    <div class="menu">
+        <div class="local">
+            China
+        </div>
+        <div class="blank">
 
+        </div>
+        <div class="menuButton">
+            About
+        </div>
+        <div class="menuButton">
+            Tours
+        </div>
+        <div class="menuButton">
+            Hotels
+        </div>
+        <div class="menuButton">
+            Excursions
+        </div>
+        <div class="menuButton">
+            Contact us
+        </div>
+        <div class="signIn">
+            Sign in
+        </div>
+
+    </div>
+    <div class="titleBlock">
+        <div class="title">
+            China Traveling
+        </div>
+        <div class="description">
+            <p style="width:60%;">The important thing in life is to have a great aim, and the determination to attain
+                it.
+                asfbsajbfasfbamfbasfjasbfmsabfasmfbamfbasmfbsfmabfasfbsajbfasfbamfbasfjasbfmsabfas
+                asfbsajbfasfbamfbasfjasbfmsabfasmfbamfbasmfbsfmabf
+            </p>
+        </div>
+        <div class="readMore">
+            READ MORE
+        </div>
+    </div>
+    <div class="searchMenu">
+        <div class="searchBlock">
+            <label class="label" for="where">Where</label>
+            <img class="sign" src="imag/where.png">
+            <select id="where" class="select">
+                <option>ChangSha</option>
+                <option>DaLian</option>
+                <option>XiaMen</option>
+            </select>
+        </div>
+        <div class="searchBlock">
+            <label class="label" for="dateIn">Date In</label>
+            <img class="sign" src="imag/dateIn.png">
+            <select id="dateIn" class="select">
+                <option>ChangSha</option>
+                <option>DaLian</option>
+                <option>XiaMen</option>
+            </select>
+        </div>
+        <div class="searchBlock">
+            <label class="label" for="dateOut">Date Out</label>
+            <img class="sign" src="imag/dateOut.png">
+            <select id="dateOut" class="select">
+                <option>ChangSha</option>
+                <option>DaLian</option>
+                <option>XiaMen</option>
+            </select>
+        </div>
+        <div class="searchBlock" style="border: none">
+            <label class="label" for="person">Number</label>
+            <img class="sign" src="imag/person.png">
+            <select id="person" class="select">
+                <option>ChangSha</option>
+                <option>DaLian</option>
+                <option>XiaMen</option>
+            </select>
+        </div>
+        <div class="searchButton">
+            Search
+        </div>
+    </div>
+</div>
 </body>
 </html>
